Put the default diazo rules.

--- a/src/plonetheme/diazobootstrap/static/manifest.cfg
+++ b/src/plonetheme/diazobootstrap/static/manifest.cfg
@@ -2,3 +2,8 @@
 title = Twitter's Bootstrap theme
 description = A theme based on Twitter's Bootstrap
 preview = preview.png
+doctype = html
+
+[theme:parameters]
+ajax_load = python: 'ajax_load' in request.form
+mode = string: test
