Replace the nav.

--- a/src/plonetheme/diazobootstrap/static/manifest.cfg
+++ b/src/plonetheme/diazobootstrap/static/manifest.cfg
@@ -2,7 +2,7 @@
 title = Twitter's Bootstrap theme
 description = A theme based on Twitter's Bootstrap
 preview = preview.png
-doctype = html
+#doctype = html
 
 [theme:parameters]
 ajax_load = python: 'ajax_load' in request.form
